[gd_scene load_steps=41 format=3 uid="uid://cuw1ymtd6iocu"]

[ext_resource type="Script" uid="uid://blidnjy0t63af" path="res://scripts/skills/totem.gd" id="1_bfx4c"]
[ext_resource type="Texture2D" uid="uid://cgqauibxomnmx" path="res://assets/misc/totem.png" id="2_0kkw6"]
[ext_resource type="PackedScene" uid="uid://bglf2lqqth734" path="res://game_scenes/skills/corrent_root.tscn" id="2_022s1"]
[ext_resource type="Shader" uid="uid://d2kp3s7cnwyl3" path="res://shaders/achatar.gdshader" id="3_ciu6w"]
[ext_resource type="Texture2D" uid="uid://ciosdkeo161s" path="res://VFX/Color/energyball/energyball_10.png" id="3_melay"]
[ext_resource type="Texture2D" uid="uid://mhvg558t6cdg" path="res://VFX/Complex/smoke/smoke2_4.png" id="4_dk5tp"]
[ext_resource type="Shader" uid="uid://jh84hba58vbi" path="res://game_scenes/skills/distortion.gdshader" id="7_cycb4"]
[ext_resource type="Texture2D" uid="uid://bht6jttj84jyb" path="res://VFX/effects/energyball_10.png" id="8_1k038"]
[ext_resource type="Texture2D" uid="uid://byni8538inu5l" path="res://VFX/Color/burst/color_burst_19.png" id="9_266am"]
[ext_resource type="Texture2D" uid="uid://v3yus6gexnah" path="res://VFX/Complex/lines/lines_5.png" id="10_8xnct"]
[ext_resource type="Texture2D" uid="uid://ejnskd6u5q4m" path="res://VFX/Complex/impacts/impact_2.png" id="11_0avow"]
[ext_resource type="Texture2D" uid="uid://cnsiue8wm4au7" path="res://VFX/Complex/smoke/smoke2_1.png" id="12_yq816"]
[ext_resource type="Texture2D" uid="uid://dinhbanhcgaj6" path="res://VFX/effects/9.png" id="13_c10wi"]

[sub_resource type="CircleShape2D" id="CircleShape2D_qeuv4"]
radius = 200.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_jpfgu"]
shader = ExtResource("3_ciu6w")
shader_parameter/rotation_speed = 6.64
shader_parameter/flatten_factor = 0.49
shader_parameter/color_ramp = Color(0.00158166, 7.78835e-07, 0.00310558, 1)
shader_parameter/alpha = 0.9

[sub_resource type="Gradient" id="Gradient_rwoko"]
colors = PackedColorArray(0, 0, 0, 1, 0.670391, 0.283128, 0.971848, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_bxlid"]
gradient = SubResource("Gradient_rwoko")

[sub_resource type="Curve" id="Curve_pjxta"]
_data = [Vector2(0.472973, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_a2hhi"]
curve = SubResource("Curve_pjxta")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_1aogp"]
particle_flag_disable_z = true
radial_velocity_min = -775.19
radial_velocity_max = -527.13
gravity = Vector3(0, 98, 0)
scale_min = 0.2
scale_curve = SubResource("CurveTexture_a2hhi")
color_ramp = SubResource("GradientTexture1D_bxlid")

[sub_resource type="CircleShape2D" id="CircleShape2D_k0e33"]
radius = 275.0

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_j1y6h"]

[sub_resource type="Gradient" id="Gradient_4dre4"]
offsets = PackedFloat32Array(0, 0.360825, 0.871134)
colors = PackedColorArray(0, 0, 0, 0, 0.442, 0.003, 0.87, 0.616, 0, 0, 0, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_24ugy"]
gradient = SubResource("Gradient_4dre4")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_tw5da"]
particle_flag_disable_z = true
direction = Vector3(0, -1, 0)
flatness = 1.0
initial_velocity_max = 220.93
gravity = Vector3(0, -50, 0)
scale_min = 0.02
scale_max = 0.1
color_ramp = SubResource("GradientTexture1D_24ugy")
turbulence_enabled = true
turbulence_noise_scale = 3.427

[sub_resource type="FastNoiseLite" id="FastNoiseLite_y2q2p"]
fractal_octaves = 6
domain_warp_frequency = 0.695
domain_warp_fractal_gain = 0.245

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_rivrw"]
noise = SubResource("FastNoiseLite_y2q2p")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_6v5sl"]
shader = ExtResource("7_cycb4")
shader_parameter/source_texture = ExtResource("8_1k038")
shader_parameter/distortion_texture = SubResource("NoiseTexture2D_rivrw")
shader_parameter/distortion_strength = 0.095

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_k1ddj"]

[sub_resource type="Gradient" id="Gradient_epa16"]
offsets = PackedFloat32Array(0.139175, 1)
colors = PackedColorArray(0, 0, 0, 1, 0.254902, 0, 0.513726, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_tk828"]
gradient = SubResource("Gradient_epa16")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_d5ul5"]
particle_flag_disable_z = true
emission_shape = 1
emission_sphere_radius = 50.15
direction = Vector3(0, -1, 0)
spread = 20.52
flatness = 1.0
initial_velocity_min = 11.63
initial_velocity_max = 155.04
gravity = Vector3(0, -100, 0)
scale_min = 0.1
scale_max = 0.5
color_ramp = SubResource("GradientTexture1D_tk828")

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_1knk0"]

[sub_resource type="Animation" id="Animation_3mod8"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("erupt:emitting")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("strike:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("strike:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0.360784, 0.117647, 0.631373, 0.427451)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("wave:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 0.952381)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("explosion:emitting")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("wave:modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0.282353, 0, 0.631373, 0.478431)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("explosion2:emitting")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("explosion3:emitting")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("GPUParticles2D2:emitting")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/9/type = "value"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath("strike:visible")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/10/type = "value"
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/path = NodePath("erupt:visible")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/11/type = "value"
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/path = NodePath("wave:visible")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/12/type = "value"
tracks/12/imported = false
tracks/12/enabled = true
tracks/12/path = NodePath("explosion:visible")
tracks/12/interp = 1
tracks/12/loop_wrap = true
tracks/12/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/13/type = "value"
tracks/13/imported = false
tracks/13/enabled = true
tracks/13/path = NodePath("explosion2:visible")
tracks/13/interp = 1
tracks/13/loop_wrap = true
tracks/13/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/14/type = "value"
tracks/14/imported = false
tracks/14/enabled = true
tracks/14/path = NodePath("explosion3:visible")
tracks/14/interp = 1
tracks/14/loop_wrap = true
tracks/14/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_20fb8"]
resource_name = "dark_explosion"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("erupt:emitting")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.233333, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("strike:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.233333, 0.433333),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(1, 0.8)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("strike:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.233333, 0.566667, 0.966667),
"transitions": PackedFloat32Array(0.0915054, 1, 1),
"update": 0,
"values": [Color(0.360784, 0.117647, 0.631373, 0.427451), Color(0.360784, 0.117647, 0.631373, 0.345098), Color(0.360784, 0.117647, 0.631373, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("wave:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.233333, 0.433333),
"transitions": PackedFloat32Array(0.203063, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(1, 0.952381)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("explosion:emitting")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0.233333, 0.433333),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("wave:modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0.233333, 0.433333, 0.8),
"transitions": PackedFloat32Array(0.0743257, 0.0179484, 7.46426),
"update": 0,
"values": [Color(0.282353, 0, 0.631373, 0.478431), Color(0.282353, 0, 0.631373, 0.309804), Color(0.282353, 0, 0.631373, 0)]
}
tracks/6/type = "method"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("explosion")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0, 0.966667),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [],
"method": &"restart"
}, {
"args": [],
"method": &"queue_free"
}]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("explosion2:emitting")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0.233333, 0.433333),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/8/type = "method"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("explosion2")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0, 0.966667),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [],
"method": &"restart"
}, {
"args": [],
"method": &"queue_free"
}]
}
tracks/9/type = "value"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath("explosion3:emitting")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = {
"times": PackedFloat32Array(0.233333, 0.433333),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/10/type = "method"
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/path = NodePath("explosion3")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/keys = {
"times": PackedFloat32Array(0, 0.966667),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [],
"method": &"restart"
}, {
"args": [],
"method": &"queue_free"
}]
}
tracks/11/type = "value"
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/path = NodePath("GPUParticles2D2:emitting")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/keys = {
"times": PackedFloat32Array(0, 0.233333),
"transitions": PackedFloat32Array(0.00592076, 0.0426888),
"update": 1,
"values": [true, false]
}
tracks/12/type = "value"
tracks/12/imported = false
tracks/12/enabled = true
tracks/12/path = NodePath("strike:visible")
tracks/12/interp = 1
tracks/12/loop_wrap = true
tracks/12/keys = {
"times": PackedFloat32Array(0, 0.233333),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/13/type = "value"
tracks/13/imported = false
tracks/13/enabled = true
tracks/13/path = NodePath("erupt:visible")
tracks/13/interp = 1
tracks/13/loop_wrap = true
tracks/13/keys = {
"times": PackedFloat32Array(0, 0.233333),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/14/type = "value"
tracks/14/imported = false
tracks/14/enabled = true
tracks/14/path = NodePath("wave:visible")
tracks/14/interp = 1
tracks/14/loop_wrap = true
tracks/14/keys = {
"times": PackedFloat32Array(0, 0.233333),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/15/type = "method"
tracks/15/imported = false
tracks/15/enabled = true
tracks/15/path = NodePath("erupt")
tracks/15/interp = 1
tracks/15/loop_wrap = true
tracks/15/keys = {
"times": PackedFloat32Array(0, 0.966667),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [],
"method": &"restart"
}, {
"args": [],
"method": &"queue_free"
}]
}
tracks/16/type = "value"
tracks/16/imported = false
tracks/16/enabled = true
tracks/16/path = NodePath("explosion:visible")
tracks/16/interp = 1
tracks/16/loop_wrap = true
tracks/16/keys = {
"times": PackedFloat32Array(0, 0.233333),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/17/type = "value"
tracks/17/imported = false
tracks/17/enabled = true
tracks/17/path = NodePath("explosion2:visible")
tracks/17/interp = 1
tracks/17/loop_wrap = true
tracks/17/keys = {
"times": PackedFloat32Array(0, 0.233333),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/18/type = "value"
tracks/18/imported = false
tracks/18/enabled = true
tracks/18/path = NodePath("explosion3:visible")
tracks/18/interp = 1
tracks/18/loop_wrap = true
tracks/18/keys = {
"times": PackedFloat32Array(0, 0.233333, 0.433333),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [false, true, false]
}
tracks/19/type = "method"
tracks/19/imported = false
tracks/19/enabled = true
tracks/19/path = NodePath(".")
tracks/19/interp = 1
tracks/19/loop_wrap = true
tracks/19/keys = {
"times": PackedFloat32Array(0.233333),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"emit_cam_shake"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_u4dqa"]
_data = {
&"RESET": SubResource("Animation_3mod8"),
&"dark_explosion": SubResource("Animation_20fb8")
}

[sub_resource type="Gradient" id="Gradient_4q20t"]
offsets = PackedFloat32Array(0, 0.154639, 0.417526, 0.623711, 0.814433, 0.994845)
colors = PackedColorArray(0.34902, 0.156863, 0.572549, 0.498039, 0, 0, 0, 1, 0, 0, 0, 1, 0.179909, 0.000311237, 0.299991, 1, 0.00494715, 5.72982e-06, 0.0239241, 0.486111, 0.388235, 0, 0.8, 0)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_w2bdc"]
gradient = SubResource("Gradient_4q20t")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_dmqxk"]
particle_flag_disable_z = true
direction = Vector3(0, -1, 0)
initial_velocity_max = 96.9
radial_velocity_min = -2.23517e-05
radial_velocity_max = 200.0
gravity = Vector3(0, 100, 0)
scale_min = 0.1
scale_max = 0.5
color_ramp = SubResource("GradientTexture1D_w2bdc")
hue_variation_min = -2.23517e-08
hue_variation_max = -2.23517e-08

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_ddwut"]
blend_mode = 1

[node name="Totem" type="Area2D"]
scale = Vector2(1, 0.84)
collision_mask = 32
script = ExtResource("1_bfx4c")
max_enemies = 5
pull_radius = 50
totem_duration = 5.0
tick_interval = 0.5
corrent_scene = ExtResource("2_022s1")

[node name="colision" type="CollisionShape2D" parent="."]
visible = false
scale = Vector2(1, 0.88)
shape = SubResource("CircleShape2D_qeuv4")

[node name="GPUParticles2D2" type="GPUParticles2D" parent="."]
show_behind_parent = true
z_index = -1
z_as_relative = false
material = SubResource("ShaderMaterial_jpfgu")
position = Vector2(0, 79.7619)
scale = Vector2(1e-05, 1e-05)
amount = 16
texture = ExtResource("3_melay")
fixed_fps = 60
process_material = SubResource("ParticleProcessMaterial_1aogp")

[node name="Totem" type="Sprite2D" parent="."]
z_index = 1
position = Vector2(0, 26)
scale = Vector2(0.7, 0.652381)
texture = ExtResource("2_0kkw6")

[node name="TotemDurationTimer" type="Timer" parent="."]

[node name="DamageTimer" type="Timer" parent="."]

[node name="ExplosionArea" type="Area2D" parent="."]
visible = false
collision_mask = 16

[node name="explosion_colision" type="CollisionShape2D" parent="ExplosionArea"]
scale = Vector2(1, 0.880001)
shape = SubResource("CircleShape2D_k0e33")
debug_color = Color(0.946036, 5.87195e-06, 0.589682, 0.42)

[node name="GPUParticles2D" type="GPUParticles2D" parent="."]
modulate = Color(1, 1, 1, 0.541)
z_index = 1
material = SubResource("CanvasItemMaterial_j1y6h")
position = Vector2(0, 58)
scale = Vector2(-0.765579, 1.19299)
amount = 50
texture = ExtResource("4_dk5tp")
local_coords = true
process_material = SubResource("ParticleProcessMaterial_tw5da")

[node name="Energyball10" type="Sprite2D" parent="."]
visible = false
material = SubResource("ShaderMaterial_6v5sl")
position = Vector2(-467, 2.38095)
scale = Vector2(1, 0.857143)
texture = ExtResource("3_melay")

[node name="strike" type="Sprite2D" parent="."]
visible = false
modulate = Color(0.360784, 0.117647, 0.631373, 0.427451)
position = Vector2(0, 34.5238)
texture = ExtResource("9_266am")

[node name="erupt" type="GPUParticles2D" parent="."]
visible = false
modulate = Color(1, 1, 1, 0.611765)
z_index = 1
material = SubResource("CanvasItemMaterial_k1ddj")
position = Vector2(0, -20.2381)
scale = Vector2(1, 1.14286)
emitting = false
amount = 50
texture = ExtResource("10_8xnct")
preprocess = 10.0
speed_scale = 7.0
fixed_fps = 60
process_material = SubResource("ParticleProcessMaterial_d5ul5")

[node name="wave" type="Sprite2D" parent="."]
visible = false
modulate = Color(0.282353, 0, 0.631373, 0.478431)
material = SubResource("CanvasItemMaterial_1knk0")
position = Vector2(1, 29.7619)
scale = Vector2(1, 0.952381)
texture = ExtResource("11_0avow")

[node name="anim" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_u4dqa")
}

[node name="explosion" type="GPUParticles2D" parent="."]
visible = false
z_index = 1
position = Vector2(1, 29.7619)
scale = Vector2(1, 0.952381)
emitting = false
amount = 50
texture = ExtResource("12_yq816")
preprocess = 1.0
speed_scale = 2.5
explosiveness = 1.0
fixed_fps = 60
process_material = SubResource("ParticleProcessMaterial_dmqxk")

[node name="explosion2" type="GPUParticles2D" parent="."]
visible = false
position = Vector2(1, 29.7619)
scale = Vector2(1, 0.952381)
emitting = false
amount = 50
texture = ExtResource("12_yq816")
preprocess = 10.0
speed_scale = 2.5
explosiveness = 1.0
fixed_fps = 60
process_material = SubResource("ParticleProcessMaterial_dmqxk")

[node name="explosion3" type="GPUParticles2D" parent="."]
unique_name_in_owner = true
visible = false
material = SubResource("CanvasItemMaterial_ddwut")
position = Vector2(1, 29.7619)
scale = Vector2(1, 0.952381)
emitting = false
amount = 300
texture = ExtResource("13_c10wi")
preprocess = 10.0
speed_scale = 2.5
explosiveness = 1.0
fixed_fps = 60
process_material = SubResource("ParticleProcessMaterial_dmqxk")

[connection signal="body_entered" from="." to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_Area2D_body_exited"]
[connection signal="timeout" from="TotemDurationTimer" to="." method="_on_TotemDurationTimer_timeout"]
[connection signal="timeout" from="DamageTimer" to="." method="_on_DamageTimer_timeout"]
